SF Primes/src/objects/Project_Milestone_Definition_Product__c.object
<CustomObject>
    <description>Junction object between Standard Milestones and Products. Used to related standard milestones to Products so that appropriate milestones can be added to the sub-project based on the products selected for the sub-project</description>
    <fields>
        <fullName>Dealership_Need__c</fullName>
        <formula>Product__r.Solution__r.Question_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Need</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Milestone_Definition__c</fullName>
        <label>Milestone Definition</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Milestone Definition is not active.</errorMessage>
            <filterItems>
                <field>Milestone_Definition__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone_Definition__c</referenceTo>
        <relationshipLabel>Project Milestone Definition Products</relationshipLabel>
        <relationshipName>MilestoneDefProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <formula>Milestone_Definition__r.Description__c</formula>
        <label>Milestone Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Project Milestone Definition Products</relationshipLabel>
        <relationshipName>Project_Milestone_Definition_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <formula>Product__r.Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution</label>
        <type>Text</type>
    </fields>
    <label>Project Milestone Definition Product</label>
    <nameField>
        <displayFormat>MDP-{0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestone Definition Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>